# pet-robot

./: .gitignore  README.md  __init__.py  auto_map.py  autonomous_mode.py  benchmark_custom_1767297265.json  benchmark_explorer.py  benchmark_ros2_1767297318.json  benchmark_ros2_1767297470.json  benchmark_ros2_1767297612.json  build.sh  camera_obstacle.py  elevenlabs_speaker.py  encoder_interface.py  exploration_map.npy  explore.py  lidar_explore.py  lidar_rplidar.py  motor_interface.py  movement_controller.py  occupancy_map.py  odometry.py  openai_vision.py  package.xml  pc_setup.sh  requirements.txt  robot_pet.py  safety_monitor.py  sensor_fusion.py  setup_env.sh  simple_motor_server.py  smart_explore.py  start_rover.sh  strategy_detector.py  vision_only_explore.py  voice_commander.py  voice_listener.py  whisper_listener.py
actuators/: __init__.py
brain/: __init__.py  robot_brain.py  robot_pet.py
config/: rover.rviz
data/: exploration_map.npy  face_labels.pkl  face_model.yml
docs/: ultrasonic_integration.md
launch/: rviz_bringup.launch.py
maps/: floor_20251229_171655.json
navigation/: __init__.py  mapping.py  navigation.py  occupancy_map.py  sensor_fusion.py
perception/: __init__.py  face_recognition_simple.py  lidar_detector.py  openai_vision.py
rover_bringup/: camera_node.py  imu_node.py  lidar_filter.py  object_detector.py
scripts/: __init__.py  auto_map.py  explore.py  explore_debug.py  lidar_explore.py  panic_stop.py  smart_explore.py  view_map.py  vision_only_explore.py
sensors/: __init__.py  imu_mpu6050.py  ultrasonic.py
slam/: mapper.py  (+5 more)
(+35 files in other folders)
